--- a/index.html
+++ b/index.html
@@ -222,25 +222,25 @@ const korunaData = [
 {p:"1",hora:"Mont Blanc",v:"4807",z:"Francie / Itálie",d:"31. 8. 2007",cas:"7:09",team:"1. Karel, Duštič, 2. Mrňous, Radka, Petr Moravec",obt:"B",pohori:"Alpy",imgs:[11,12,13,14,15,16,17,18,19],povidani:"Výstup jsme zahájili za svítání z chaty Gouter.\n\nDruhý den nás čekala závěrečná pasáž po ledovci, která vyžadovala jistotu v pohybu i koordinaci týmu."},
 {p:"2",hora:"Dufourspitze",v:"4634",z:"Švýcarsko",d:"",cas:"",team:"",obt:"",pohori:"Alpy",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
 {p:"3",hora:"Grossglockner",v:"3798",z:"Rakousko",d:"30. 6. 2025",cas:"11:18",team:"Karel, Bára, Luky",obt:"B",pohori:"Alpy",imgs:[31,32,33,34,35,36,37,38,39],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"4",hora:"Mulhacén",v:"3479",z:"Španělsko",d:"10. 9. 2022",cas:"14:13",team:"Karel, Míša, Pedro",obt:"A",pohori:"Sierra Nevada, nejvyšší hora Tenerife je Pico de Teide (3718 m n. m.)",imgs:[41],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"5",hora:"Zugspitze",v:"2962",z:"Německo",d:"21. 6. 2025",cas:"9:20",team:"Karel",obt:"",pohori:"Alpy",imgs:[51],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"4",hora:"Mulhacén",v:"3479",z:"Španělsko",d:"10. 9. 2022",cas:"14:13",team:"Karel, Míša, Pedro",obt:"A",pohori:"Sierra Nevada, nejvyšší hora Tenerife je Pico de Teide (3718 m n. m.)",imgs:[41,42,43,44,45,46],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"5",hora:"Zugspitze",v:"2962",z:"Německo",d:"21. 6. 2025",cas:"9:20",team:"Karel",obt:"",pohori:"Alpy",imgs:[51,52,53,54,55,56,57,58,59],povidani:"Popis výstupu bude ještě doplněn"},
 {p:"6",hora:"Coma Pedrosa",v:"2942",z:"Andorra",d:"",cas:"",team:"",obt:"",pohori:"Pyreneje",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
 {p:"7",hora:"Musala",v:"2925",z:"Bulharsko",imgs:[0],povidani:"Popis výstupu bude ještě doplněn",pohori:"Rila, nejvyšší hora celého Balkánu"},
 {p:"8",hora:"Mytikas",v:"2917",z:"Řecko",d:"",cas:"",team:"",obt:"",pohori:"Olymp",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
 {p:"9",hora:"Triglav",v:"2864",z:"Slovinsko",d:"25. 7. 2022",cas:"10:22",team:"1. 7:01 Marťas, Luky, Terka H, Michal H, 2. Karel, Bára, Bára H, Eva K",obt:"",pohori:"Alpy",imgs:[91,92,93,94,95,96,97,98,99],povidani:"Popis výstupu bude ještě doplněn"},
 {p:"10",hora:"Velký Korab",v:"2764",z:"Albánie / Makedonie",d:"",cas:"",team:"",obt:"",pohori:"Korab",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"11",hora:"Gerlachovský štít",v:"2655",z:"Slovensko",d:"24. 7. 2021",cas:"9:09",team:"1. Marťas, Terka, Karel, 2. Lada, Helča, Rasťa",obt:"",pohori:"Vysoké Tatry",imgs:[111],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"12",hora:"Vorder Grauspitz",v:"2599",z:"Lichtenštejnsko",d:"6. 9. 2025",cas:"12:17",team:"Karel, Luky",obt:"",pohori:"Alpy",imgs:[121],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"11",hora:"Gerlachovský štít",v:"2655",z:"Slovensko",d:"24. 7. 2021",cas:"9:09",team:"1. Marťas, Terka, Karel, 2. Lada, Helča, Rasťa",obt:"",pohori:"Vysoké Tatry",imgs:[111,112,113,114,115,116,117,118,119],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"12",hora:"Vorder Grauspitz",v:"2599",z:"Lichtenštejnsko",d:"6. 9. 2025",cas:"12:17",team:"Karel, Luky",obt:"",pohori:"Alpy",imgs:[121,122,123,124,125,126],povidani:"Popis výstupu bude ještě doplněn"},
 {p:"13",hora:"Moldoveanu",v:"2544",z:"Rumunsko",d:"",cas:"",team:"",obt:"",pohori:"Fagaraš",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
 {p:"14",hora:"Zla Kolata",v:"2534",z:"Černá Hora",d:"",cas:"",team:"",obt:"",pohori:"Dinárské hory",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"15",hora:"Rysy",v:"2499",z:"Polsko",d:"21. 9. 2024",cas:"10:21",team:"Karel",obt:"",pohori:"Vysoké Tatry, hlavní vrchol je na území Slovenska (2503 m n. m.)",imgs:[151],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"16",hora:"Galdhøpiggen",v:"2469",z:"Norsko",d:"7. 7. 2022",cas:"13:02",team:"Karel, Luky",obt:"",pohori:"Skandinávské pohoří",imgs:[161],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"15",hora:"Rysy",v:"2499",z:"Polsko",d:"21. 9. 2024",cas:"10:21",team:"Karel",obt:"",pohori:"Vysoké Tatry, hlavní vrchol je na území Slovenska (2503 m n. m.)",imgs:[151,152,153,154,155,156,157,158,159],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"16",hora:"Galdhøpiggen",v:"2469",z:"Norsko",d:"7. 7. 2022",cas:"13:02",team:"Karel, Luky",obt:"",pohori:"Skandinávské pohoří",imgs:[161,162,163,164,165,166,167,168,169],povidani:"Popis výstupu bude ještě doplněn"},
 {p:"17",hora:"Bosanski Maglić",v:"2386",z:"Bosna a Hercegovina",d:"",cas:"",team:"",obt:"",pohori:"Dinárské hory",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
 {p:"18",hora:"Midžur",v:"2169",z:"Srbsko",d:"",cas:"",team:"",obt:"",pohori:"Stara planina, nejvyšší hora Kosova je Djeravica (2656 m n. m.)",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
 {p:"19",hora:"Hvannadalshnjúkur",v:"2110",z:"Island",d:"",cas:"",team:"",obt:"",pohori:"Öræfajökull",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
 {p:"20",hora:"Kebnekaise",v:"2103",z:"Švédsko",d:"",cas:"",team:"",obt:"",pohori:"Skandinávské hory",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
 {p:"21",hora:"Hoverla",v:"2061",z:"Ukrajina",d:"",cas:"",team:"",obt:"",pohori:"Čornohora",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"22",hora:"Torre",v:"1993",z:"Portugalsko",d:"28. 3. 2025",cas:"14:05",team:"Karel, Marťas, Luky, Bára, Klárka",obt:"",pohori:"Serra da Estrela, nejvyšší hora Azor je Ponta do Pico (2351 m n. m.)",imgs:[221],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"22",hora:"Torre",v:"1993",z:"Portugalsko",d:"28. 3. 2025",cas:"14:05",team:"Karel, Marťas, Luky, Bára, Klárka",obt:"",pohori:"Serra da Estrela, nejvyšší hora Azor je Ponta do Pico (2351 m n. m.)",imgs:[221,222,223,224,225,226,227,228,229],povidani:"Popis výstupu bude ještě doplněn"},
 {p:"23",hora:"Narodnaja",v:"1895",z:"Rusko",d:"",cas:"",team:"",obt:"",pohori:"Ural, podle jiné hranice Evropy Elbrus (5642 m n. m.)",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
 {p:"24",hora:"Sinjal",v:"1831",z:"Chorvatsko",d:"",cas:"",team:"",obt:"",pohori:"Dinárské hory",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
 {p:"25",hora:"Sněžka",v:"1603",z:"Česko",d:"",cas:"",team:"",obt:"",pohori:"Krkonoše",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
@@ -248,7 +248,7 @@ const korunaData = [
 {p:"27",hora:"Halti",v:"1324",z:"Finsko",d:"",cas:"",team:"",obt:"",pohori:"Skandinávské pohoří, vrchol hory je na území Norska (1365 m n. m.)",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
 {p:"28",hora:"Carrauntoohil",v:"1041",z:"Irsko",d:"",cas:"",team:"",obt:"",pohori:"Macgillycuddy's Reeks",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
 {p:"29",hora:"Mahya Dağı",v:"1031",z:"Turecko",d:"",cas:"",team:"",obt:"",pohori:"Strandža, nejvyšší hora asijské části je Ararat (5137 m n. m.)",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
-{p:"30",hora:"Kékes",v:"1014",z:"Maďarsko",d:"17. 8. 2023",cas:"10:39",team:"Karel, Luky",obt:"",pohori:"Mátra",imgs:[301],povidani:"Popis výstupu bude ještě doplněn"},
+{p:"30",hora:"Kékes",v:"1014",z:"Maďarsko",d:"17. 8. 2023",cas:"10:39",team:"Karel, Luky",obt:"",pohori:"Mátra",imgs:[301,302,303,304,305,306],povidani:"Popis výstupu bude ještě doplněn"},
 {p:"31",hora:"Monte Titano",v:"756",z:"San Marino",d:"",cas:"",team:"",obt:"",pohori:"Apeniny",imgs:[0],povidani:"Popis výstupu bude ještě doplněn"},
 {p:"32",hora:"Signal de Botrange",v:"694",z:"Belgie",d:"6. 10. 2024",cas:"18:32",team:"Karel, Marťas, Luky, Bára, Klárka",obt:"",pohori:"Ardeny",imgs:[321],povidani:"Popis výstupu bude ještě doplněn"},
 {p:"33",hora:"Kneiff",v:"560",z:"Lucembursko",d:"6. 10. 2024",cas:"20:32",team:"Karel, Marťas, Luky, Bára, Klárka",obt:"",pohori:"Ardeny",imgs:[331],povidani:"Popis výstupu bude ještě doplněn"},
@@ -266,12 +266,12 @@ const korunaData = [
 
 /* ---------- Data: Alpy 4000 ---------- */
 const alpyData = [
-{p:"1",hora:"Mont Blanc",v:"4 807",z:"Francie / Itálie",d:"31. 8. 2007",cas:"7:09",team:"1. Karel, Duštič, 2. Mrňous, Radka, Petr Moravec",obt:"B",pohori:"Mont Blank",imgs:[11,11,11,11,],povidani:""},
+{p:"1",hora:"Mont Blanc",v:"4 807",z:"Francie / Itálie",d:"31. 8. 2007",cas:"7:09",team:"1. Karel, Duštič, 2. Mrňous, Radka, Petr Moravec",obt:"B",pohori:"Mont Blank",imgs:[11,12,13],povidani:""},
 {p:"2",hora:"Mont Blanc di Courmayeur",v:"4 765",z:"Itálie",obt:"B+",pohori:"Mont Blank",imgs:[0],povidani:""},
 {p:"3",hora:"Dufourspitze",v:"4 634",z:"Švýcarsko",obt:"B+",pohori:"Monte Rosa",imgs:[0],povidani:""},
 {p:"4",hora:"Nordend",v:"4 609",z:"Švýcarsko",obt:"B+",pohori:"Monte Rosa",imgs:[0],povidani:""},
-{p:"5",hora:"Zumsteinspitze",v:"4 563",z:"Itálie / Švýcarsko",team:"Karel, Luky",obt:"B-",pohori:"Monte Rosa",imgs:[51,51],povidani:""},
-{p:"6",hora:"Punta Gnifetti",v:"4 554",z:"Itálie / Švýcarsko",team:"Karel, Luky",obt:"B-",pohori:"Monte Rosa",imgs:[61],povidani:""},
+{p:"5",hora:"Zumsteinspitze",v:"4 563",z:"Itálie / Švýcarsko",d:"3.9.2025",cas:"10:48",team:"Karel, Luky",obt:"B-",pohori:"Monte Rosa",imgs:[51,52,53],povidani:""},
+{p:"6",hora:"Punta Gnifetti",v:"4 554",z:"Itálie / Švýcarsko",d:"3.9.2025",cas:"12:11",team:"Karel, Luky",obt:"B-",pohori:"Monte Rosa",imgs:[61,62,63],povidani:""},
 {p:"7",hora:"Dom",v:"4 545",z:"Švýcarsko",obt:"B",pohori:"Mischabel",imgs:[0],povidani:""},
 {p:"8",hora:"Lyskamm orientale",v:"4 527",z:"Itálie / Švýcarsko",obt:"C-",pohori:"Liskamm",imgs:[0],povidani:""},
 {p:"9",hora:"Weisshorn",v:"4 506",z:"Švýcarsko",obt:"C",pohori:"Weisshorn",imgs:[0],povidani:""},
@@ -282,7 +282,7 @@ const alpyData = [
 {p:"14",hora:"Mont Maudit",v:"4 468",z:"Francie / Itálie",obt:"B+",pohori:"Mont Blank",imgs:[0],povidani:""},
 {p:"15",hora:"Parrotspitze",v:"4 432",z:"Itálie / Švýcarsko",obt:"B-",pohori:"Monte Rosa",imgs:[0],povidani:""},
 {p:"16",hora:"Dent Blanche",v:"4 357",z:"Švýcarsko",obt:"B",pohori:"Matterhorn",imgs:[0],povidani:""},
-{p:"17",hora:"Ludwigshöhe",v:"4 341",z:"Itálie / Švýcarsko",team:"Karel, Luky",obt:"B-",pohori:"Monte Rosa",imgs:[171,172],povidani:""},
+{p:"17",hora:"Ludwigshöhe",v:"4 341",z:"Itálie / Švýcarsko",d:"4.9.2025",cas:"8:09",team:"Karel, Luky",obt:"B-",pohori:"Monte Rosa",imgs:[171,172,173],povidani:""},
 {p:"18",hora:"Nadelhorn",v:"4 327",z:"Švýcarsko",obt:"B+",pohori:"Mischabel",imgs:[0],povidani:""},
 {p:"19",hora:"Corno Nero",v:"4 322",z:"Itálie",obt:"B+",pohori:"Monte Rosa",imgs:[0],povidani:""},
 {p:"20",hora:"Combin de Grafeneire",v:"4 314",z:"Švýcarsko",obt:"C-",pohori:"Grand Combin",imgs:[0],povidani:""},
@@ -295,7 +295,7 @@ const alpyData = [
 {p:"27",hora:"Castor",v:"4 228",z:"Itálie / Švýcarsko",obt:"B-",pohori:"Liskamm",imgs:[0],povidani:""},
 {p:"28",hora:"Zinalrothorn",v:"4 221",z:"Švýcarsko",obt:"C-",pohori:"Weisshorn",imgs:[0],povidani:""},
 {p:"29",hora:"Hohbärghorn",v:"4 019",z:"Švýcarsko",obt:"B+",pohori:"Mischabel",imgs:[0],povidani:""},
-{p:"30",hora:"Piramide Vincent",v:"4 215",z:"Itálie / Švýcarsko",team:"Karel, Luky",obt:"B-",pohori:"Monte Rosa",imgs:[301],povidani:""},
+{p:"30",hora:"Piramide Vincent",v:"4 215",z:"Itálie / Švýcarsko",d:"2.9.2025",cas:"10:00",team:"Karel, Luky",obt:"B-",pohori:"Monte Rosa",imgs:[301,302,303],povidani:""},
 {p:"31",hora:"Punta Walker",v:"4 206",z:"Itálie",obt:"C-",pohori:"Grandes Jorasses",imgs:[0],povidani:""},
 {p:"32",hora:"Alphubel",v:"4 206",z:"Švýcarsko",obt:"B",pohori:"Allalinhorn",imgs:[0],povidani:""},
 {p:"33",hora:"Rimpfischhorn",v:"4 199",z:"Švýcarsko",obt:"B+",pohori:"Allalinhorn",imgs:[0],povidani:""},
@@ -350,6 +350,7 @@ const alpyData = [
 {p:"82",hora:"Les Droites",v:"4 000",z:"Francie",obt:"C",pohori:"Aiguille Verte",imgs:[0],povidani:""}
 ];
 
+  
 /* --- Modal --- */
 const modal = document.getElementById("modal-backdrop");
 const modalContent = document.getElementById("modal-content");
